# BioDesignBench

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml
biodesignbench/: __init__.py  ablations.py  cli.py  difficulty.py  error_injection.py  interventions.py  multi_agent_runner.py  task_generator.py  taxonomy.py  tool_audit.py  validate_inputs.py
biodesignbench-leaderboard/: README.md  app.py  eval_agent.py  eval_boltz.py  eval_dispatcher.py  eval_judge.py  eval_queue.py  eval_scorer.py  eval_tasks.py  example_mcp_server.py  example_server.py  leaderboard_data.json  mcp_tool_schemas.json  modal_boltz_app.py  requirements.txt
biodesignbench-leaderboard/llm_judge/: __init__.py  aggregation.py  judge.py  panel.py  plan_eval.py
biodesignbench/agents/: __init__.py  base.py
biodesignbench/agents/baselines/: __init__.py  hardcoded_pipeline.py  human_expert.py  human_expert_agent.py  human_trainee.py  scripted.py
biodesignbench/agents/bio_specific/: __init__.py  bioml_agent.py  biomni.py  stella.py
biodesignbench/agents/general_purpose/: __init__.py  claude_code.py  deepseek_tools.py  gemini_tools.py  gpt5_tools.py  open_interpreter.py
biodesignbench/eval/: __init__.py  contamination.py  failure_analysis.py  input_manager.py  perturbations.py  pipeline.py  report_generator.py  results.py  robustness.py  statistics.py  trajectory_analysis.py
biodesignbench/eval/llm_judge/: __init__.py  aggregation.py  judge.py  panel.py  plan_eval.py  rubrics.py
biodesignbench/eval/metrics/: __init__.py  approach.py  sequence.py  (+2 more)
biodesignbench/sandbox/: __init__.py  executor.py
biodesignbench/task_templates/: __init__.py  cfd.py  cpx.py  dnb.py  dnk.py  sqo.py
biodesignbench/tools/: __init__.py  protein_design_provider.py
biodesignbench/utils/: __init__.py  config.py
docker/sandbox/: Dockerfile
docs/: PRD.md  color_palette.md
examples/demo_task/: binder_001.md
scripts/analysis/: backbone_skip_analysis.py  bdb_020_fig1_overview.py  bdb_021_table1_taxonomy.py  bdb_022_fig2_leaderboard.py  bdb_023_fig3_mode_comparison.py  bdb_024_fig4_difficulty_heatmap.py  bdb_025_fig5_radar_chart.py  bdb_026_bootstrap_ci.py  bdb_050_variance_decomposition.py  bdb_051_mode_uplift.py  bdb_052_irt_analysis.py  bdb_053_denovo_vs_redesign.py  bdb_054_tool_usage.py  bdb_055_tool_sequence.py  bdb_056_af2_metrics.py  bdb_057_sequence_analysis.py  bdb_058_cross_model.py  bdb_059_failure_modes.py  bdb_060_contamination.py  bdb_fig5_bottleneck.py  candidate_screening_v1.py  critics_not_creators.py  deepseek_behavior_analysis.py  fig2_leaderboard.py  fig3_mode_comparison.py  fig3_panelC_options.py  fig4_difficulty_slope.py  fig5_category_dotplot.py  fig6_panel1_tool_call_flow.py  fig6_tool_analysis.py  guided_mode_delta.py  load_results.py  mode_completion_analysis.py  mode_depth_comparison_v1.py  multi_metric_convergence.py  mvp_quality_correlation.py  pipeline_completion_v2.py  plan_exec_depth_v3.py  plan_exec_gap_v2.py  reasoning_trace_analysis.py  (+19 more)
(+12 files in other folders)
