[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biodesignbench"
version = "0.1.0"
description = "Benchmark for Biomolecule Design AI Agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Jeonghyeon Kim", email = "jeonghyeon.kim@duke.edu"},
    {name = "Philip Romero", email = "philip.romero@duke.edu"},
]
keywords = ["benchmark", "protein", "design", "ai", "agent", "biomolecule"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "biopython>=1.81",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "requests>=2.28",
    "tqdm>=4.65",
    "rich>=13.0",
    "click>=8.1",
    "aiohttp>=3.8",
    "aiofiles>=23.0",
    "python-dotenv>=1.0",
    "docker>=7.0",
    "jsonschema>=4.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.0",
    "ruff>=0.1",
]
agents = [
    "anthropic>=0.75",
    "openai>=1.12",
    "google-generativeai>=0.8",
]
bio-agents = [
    "biomni @ git+https://github.com/snap-stanford/Biomni.git@main",
    "aideml",
    # open-interpreter excluded: pins anthropic<0.38, conflicts with >=0.75
    "langchain-openai",
    "langchain-anthropic",
    "langchain-google-genai",
    "langchain-community",
]
bio = [
    "biotite>=0.37",
    "prody>=2.4",
    "tmtools>=0.1",
    "scikit-learn>=1.3",
]
all = [
    "biodesignbench[dev,agents,bio-agents,bio]",
]

[project.scripts]
biodesignbench = "biodesignbench.cli:main"

[project.urls]
Homepage = "https://github.com/RomeroLab/BioDesignBench"
Documentation = "https://github.com/RomeroLab/BioDesignBench#readme"
Repository = "https://github.com/RomeroLab/BioDesignBench"

[tool.setuptools.packages.find]
where = ["."]
include = ["biodesignbench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["biodesignbench"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
